tests/vendor/valid/simple/assignment_in_init.c
//expect 0
//tags: simple, assignment, variables
int main() {
    int a;
    int b = a = 0;
    return b;
}