tests/vendor/invalid/semantics/undeclared_compound_assignment_use.c
//tags: simple, compound, undeclared
int main() {
    int b = 10;
    b *= a;
    return 0;
}